--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deson/fetch",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "一个基于fetch api封装的restful请求风格的简易http请求库",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,7 +9,8 @@
     "url": "https://github.com/desonyuan/deson-fetch"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "publish": "tsc&&publish"
   },
   "keywords": [],
   "author": "",
