--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@deson/fetch",
-  "version": "2.1.3",
+  "name": "restful-fetch",
+  "version": "1.0.0",
   "description": "一个基于fetch api封装的restful请求风格的简易http请求库",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,7 +9,7 @@
     "url": "https://github.com/desonyuan/deson-fetch"
   },
   "scripts": {
-    "build": "tsc&&npm publish"
+    "publish": "tsc&&npm publish"
   },
   "keywords": [],
   "author": "",
