--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "restful-fetch",
-  "version": "1.0.0",
+  "name": "@deson/fetch",
+  "version": "2.1.4",
   "description": "一个基于fetch api封装的restful请求风格的简易http请求库",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/desonyuan/deson-fetch"
-  },
   "scripts": {
     "publish": "tsc&&npm publish"
   },
