--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@deson/fetch",
-  "version": "2.2.4",
+  "version": "3.0.0",
   "description": "一个基于fetch api封装的restful请求风格的简易http请求库",
+  "author": "desonyuan",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -15,7 +16,6 @@
     "request-promise",
     "axios"
   ],
-  "author": "",
   "license": "MIT",
   "devDependencies": {
     "typescript": "^5.0.3"
