--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "author": "desonyuan",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/desonyuan/deson-fetch"
+  },
   "scripts": {
     "publish": "tsc&&npm publish"
   },
