--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "modern-fetch",
-  "version": "1.3.0",
+  "version": "1.3.5",
   "description": "一个基于fetch api封装的restful请求风格的简易http请求库",
   "author": "desonyuan",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/desonyuan/modern-fetch"
@@ -22,6 +23,6 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.0.3"
+    "typescript": "^5.6.2"
   }
 }
